apps/maintainerr/overlays/nishir/patch-pvc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maintainerr
spec:
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 1Gi
        storageClassName: nishir-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
