apps/maintainerr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maintainerr
spec:
  template:
    spec:
      containers:
        - name: maintainerr
